{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 141,
  "lineage": "c56dc47d-033c-7f28-c648-df00146dc508",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:security-group/sg-0dfc21604ab8a13d3",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0dfc21604ab8a13d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f5b3f208fbeaf589"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-cluster-cluster-20241215131325244900000005",
            "name_prefix": "dev-cluster-cluster-",
            "owner_id": "172221322213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-cluster-cluster"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "dev-cluster-cluster",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:security-group/sg-0f5b3f208fbeaf589",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5b3f208fbeaf589",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc21604ab8a13d3"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc21604ab8a13d3"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc21604ab8a13d3"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc21604ab8a13d3"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc21604ab8a13d3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfc21604ab8a13d3"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "dev-cluster-node-20241215131325206300000003",
            "name_prefix": "dev-cluster-node-",
            "owner_id": "172221322213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-cluster-node",
              "kubernetes.io/cluster/dev-cluster": "owned"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "dev-cluster-node",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra",
              "kubernetes.io/cluster/dev-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2788659037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dfc21604ab8a13d3",
            "security_group_rule_id": "sgr-01695e412a07884ad",
            "self": false,
            "source_security_group_id": "sg-0f5b3f208fbeaf589",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3625285729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-05acf470ead2d891e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-406775500",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-030404c5b23b55303",
            "self": false,
            "source_security_group_id": "sg-0dfc21604ab8a13d3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-427288228",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-0cd419e62e52d49fa",
            "self": false,
            "source_security_group_id": "sg-0dfc21604ab8a13d3",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3493167410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-0dc2d4becaa1923b1",
            "self": false,
            "source_security_group_id": "sg-0dfc21604ab8a13d3",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3278486803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-0ed1aaad780f7e262",
            "self": false,
            "source_security_group_id": "sg-0dfc21604ab8a13d3",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2814938840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-08cd3f1cf689247ae",
            "self": false,
            "source_security_group_id": "sg-0dfc21604ab8a13d3",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-255185356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-058a58b2f073e23a0",
            "self": false,
            "source_security_group_id": "sg-0dfc21604ab8a13d3",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-294535032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-02e71c19a28b4249a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2673260669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-0d4e779265ea142a5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-990452626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f5b3f208fbeaf589",
            "security_group_rule_id": "sgr-0dbc1de085311945e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:network-acl/acl-032521e44320b08f8",
            "default_network_acl_id": "acl-032521e44320b08f8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-032521e44320b08f8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "172221322213",
            "subnet_ids": [
              "subnet-024d736df20048098",
              "subnet-0713f6a19be08e87c",
              "subnet-0775afb3629a081ec",
              "subnet-084d157bbd1b81fcb",
              "subnet-0c0adcb12a761460c",
              "subnet-0de8aee239fb9fd70"
            ],
            "tags": {
              "Name": "main-vpc-default"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-default",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:route-table/rtb-09f7355b3d5f21dc1",
            "default_route_table_id": "rtb-09f7355b3d5f21dc1",
            "id": "rtb-09f7355b3d5f21dc1",
            "owner_id": "172221322213",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-default"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-default",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:security-group/sg-0e3a5faae81f65745",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e3a5faae81f65745",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "172221322213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-vpc-default"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-default",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9d9d7c8471b739a",
            "arn": "arn:aws:ec2:us-east-1:172221322213:elastic-ip/eipalloc-0a9d9d7c8471b739a",
            "association_id": "eipassoc-021f6f9de763c3eec",
            "domain": "vpc",
            "id": "eipalloc-0a9d9d7c8471b739a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f92afb83d9df875d",
            "private_dns": "ip-10-0-101-96.ec2.internal",
            "private_ip": "10.0.101.96",
            "public_dns": "ec2-54-209-109-147.compute-1.amazonaws.com",
            "public_ip": "54.209.109.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-vpc-us-east-1a"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-us-east-1a",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a10eca8edf4c84cc",
            "arn": "arn:aws:ec2:us-east-1:172221322213:elastic-ip/eipalloc-0a10eca8edf4c84cc",
            "association_id": "eipassoc-021be7fd956ded5d7",
            "domain": "vpc",
            "id": "eipalloc-0a10eca8edf4c84cc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04fc33668a32c8d16",
            "private_dns": "ip-10-0-102-70.ec2.internal",
            "private_ip": "10.0.102.70",
            "public_dns": "ec2-34-237-149-168.compute-1.amazonaws.com",
            "public_ip": "34.237.149.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-vpc-us-east-1b"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-us-east-1b",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da5d33f73e663d07",
            "arn": "arn:aws:ec2:us-east-1:172221322213:elastic-ip/eipalloc-0da5d33f73e663d07",
            "association_id": "eipassoc-0c43ad3e6d8d00282",
            "domain": "vpc",
            "id": "eipalloc-0da5d33f73e663d07",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04b76f2daaa72cd65",
            "private_dns": "ip-10-0-103-151.ec2.internal",
            "private_ip": "10.0.103.151",
            "public_dns": "ec2-98-82-58-122.compute-1.amazonaws.com",
            "public_ip": "98.82.58.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-vpc-us-east-1c"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-us-east-1c",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:internet-gateway/igw-02722802d5a6cb5e4",
            "id": "igw-02722802d5a6cb5e4",
            "owner_id": "172221322213",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9d9d7c8471b739a",
            "association_id": "eipassoc-021f6f9de763c3eec",
            "connectivity_type": "public",
            "id": "nat-07a4babdaa5453159",
            "network_interface_id": "eni-0f92afb83d9df875d",
            "private_ip": "10.0.101.96",
            "public_ip": "54.209.109.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024d736df20048098",
            "tags": {
              "Name": "main-vpc-us-east-1a"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-us-east-1a",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a10eca8edf4c84cc",
            "association_id": "eipassoc-021be7fd956ded5d7",
            "connectivity_type": "public",
            "id": "nat-087d40a868cf8775b",
            "network_interface_id": "eni-04fc33668a32c8d16",
            "private_ip": "10.0.102.70",
            "public_ip": "34.237.149.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0713f6a19be08e87c",
            "tags": {
              "Name": "main-vpc-us-east-1b"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-us-east-1b",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da5d33f73e663d07",
            "association_id": "eipassoc-0c43ad3e6d8d00282",
            "connectivity_type": "public",
            "id": "nat-06208cfead0df3177",
            "network_interface_id": "eni-04b76f2daaa72cd65",
            "private_ip": "10.0.103.151",
            "public_ip": "98.82.58.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-084d157bbd1b81fcb",
            "tags": {
              "Name": "main-vpc-us-east-1c"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-us-east-1c",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032a8567c1761edd91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07a4babdaa5453159",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032a8567c1761edd9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08f84584659279d2e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-087d40a868cf8775b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f84584659279d2e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021fd17e1c966347b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06208cfead0df3177",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021fd17e1c966347b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02722802d5a6cb5e4",
            "id": "r-rtb-0d6ab0e6f2247c6731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d6ab0e6f2247c673",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:route-table/rtb-032a8567c1761edd9",
            "id": "rtb-032a8567c1761edd9",
            "owner_id": "172221322213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a4babdaa5453159",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-private-us-east-1a",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:route-table/rtb-08f84584659279d2e",
            "id": "rtb-08f84584659279d2e",
            "owner_id": "172221322213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087d40a868cf8775b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-private-us-east-1b",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:route-table/rtb-021fd17e1c966347b",
            "id": "rtb-021fd17e1c966347b",
            "owner_id": "172221322213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06208cfead0df3177",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-private-us-east-1c",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:route-table/rtb-0d6ab0e6f2247c673",
            "id": "rtb-0d6ab0e6f2247c673",
            "owner_id": "172221322213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02722802d5a6cb5e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-public"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-public",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b4209a6b07ff7c7",
            "route_table_id": "rtb-032a8567c1761edd9",
            "subnet_id": "subnet-0c0adcb12a761460c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01db98a4702da4473",
            "route_table_id": "rtb-08f84584659279d2e",
            "subnet_id": "subnet-0de8aee239fb9fd70"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c32ebfaf843027d",
            "route_table_id": "rtb-021fd17e1c966347b",
            "subnet_id": "subnet-0775afb3629a081ec"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082e278cf1d71348",
            "route_table_id": "rtb-0d6ab0e6f2247c673",
            "subnet_id": "subnet-024d736df20048098"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013acbf6aad012b5f",
            "route_table_id": "rtb-0d6ab0e6f2247c673",
            "subnet_id": "subnet-0713f6a19be08e87c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a7187653b8b2a16",
            "route_table_id": "rtb-0d6ab0e6f2247c673",
            "subnet_id": "subnet-084d157bbd1b81fcb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:subnet/subnet-0c0adcb12a761460c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0adcb12a761460c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172221322213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-private-us-east-1a",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:subnet/subnet-0de8aee239fb9fd70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de8aee239fb9fd70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172221322213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-private-us-east-1b",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:subnet/subnet-0775afb3629a081ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0775afb3629a081ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172221322213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-private-us-east-1c",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:subnet/subnet-024d736df20048098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024d736df20048098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172221322213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-public-us-east-1a",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:subnet/subnet-0713f6a19be08e87c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713f6a19be08e87c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172221322213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-public-us-east-1b",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:subnet/subnet-084d157bbd1b81fcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084d157bbd1b81fcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172221322213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc-public-us-east-1c",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            },
            "vpc_id": "vpc-0eaa3af36e3cf42c0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172221322213:vpc/vpc-0eaa3af36e3cf42c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032521e44320b08f8",
            "default_route_table_id": "rtb-09f7355b3d5f21dc1",
            "default_security_group_id": "sg-0e3a5faae81f65745",
            "dhcp_options_id": "dopt-35bfc74e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eaa3af36e3cf42c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f7355b3d5f21dc1",
            "owner_id": "172221322213",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Email": "razor.x2424@gmail.com",
              "Environment": "Dev",
              "Name": "main-vpc",
              "Owner": "MNaidzin",
              "Project": "DevOpsAssignment",
              "Source": "/mytomorrows/infra"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}